# ovium

./: .gitignore  Cargo.toml
ovium/: Cargo.toml
ovium/config/: nodes.toml
ovium/src/: client.rs  error.rs  handlers.rs  server.rs  types.rs
ovl/: Cargo.toml  file1.ovl
ovl/src/: lib.rs  main.rs
ovl_derive/: Cargo.toml
ovl_derive/src/: lib.rs
src/: client.rs  error.rs  handlers.rs  lib.rs  server.rs  types.rs
