[package]
name = "ovium"
version = "0.1.0"
authors = ["Samir Noir <samir@noir.im>"]
edition = "2021"

[dependencies]
log = "0.4"
ssh2 = "0.6"
serde_json = "1.0.44"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.3.3"
simplelog = "^0.7.4"
getopts = "0.2"
crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.2"
signal-hook = "0.1.14"
toml = "0.5.6"

[[bin]]
name = "oviumd"
path = "src/bin/server.rs"

[[bin]]
name = "oviumctl"
path = "src/bin/client.rs"
